Add clean arch implement.

--- a/ftx_wallet/pubspec.yaml
+++ b/ftx_wallet/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   flutter_bloc: ^7.0.0
   bloc: ^7.0.0
 
+  dartz: ^0.8.9
+  data_connection_checker: ^0.3.4
+  equatable: ^1.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
