--- a/ftx_wallet/pubspec.yaml
+++ b/ftx_wallet/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   data_connection_checker: ^0.3.4
   equatable: ^1.0.1
 
+  hive: ^1.4.4
+  hive_flutter: ^0.3.1
+  path_provider: ^1.3.0
+  super_easy_permissions: ^0.0.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -45,6 +50,7 @@ dev_dependencies:
   chopper_generator: ^2.3.4
   build_runner:
   built_value_generator: ^6.8.2
+  hive_generator: ^0.8.2
 
 flutter:
 
