--- a/ftx_wallet/pubspec.yaml
+++ b/ftx_wallet/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   path_provider: ^1.3.0
   super_easy_permissions: ^0.0.6
 
+  shared_preferences: ^0.5.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -50,7 +52,8 @@ dev_dependencies:
   chopper_generator: ^2.3.4
   build_runner:
   built_value_generator: ^6.8.2
-  hive_generator: ^0.8.2
+  hive_generator: ^0.5.0
+
 
 flutter:
 
