--- a/ftx_wallet/pubspec.yaml
+++ b/ftx_wallet/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   super_easy_permissions: ^0.0.6
 
   shared_preferences: ^0.5.0
+  rxdart: ^0.26.0
 
 dev_dependencies:
   flutter_test:
